# 2x2macropad_firmware

./: .gitignore  Cargo.toml  README.md  build.rs  flash.sh  hid_test.py
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
src/: data_protocol.rs  key_matrix.rs  led_effect.rs  macro_protocol.rs  macros.rs  main.rs  raw_hid.rs  rp2040_flash.rs
src/hid/: mod.rs  raw_hid.rs
