[package]
name = "macropad_firmware"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
usbd-human-interface-device = "0.3.1"
usb-device= "0.2"
packed_struct = { version = "0.10", default-features = false }
frunk = { version = "0.4", default-features = false }
fugit = "0.3"

cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.1"

defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp2040-hal ={version = "0.6.0", features = ["rt"] }
rp2040-pac = {version = "0.4.0", features = ["rt"] }

pio-proc = "0.2.0"
pio = "0.2.0"
rp-pico = "0.5"

smart-leds = "0.3.0"
ws2812-pio = "0.4.0"

arrayvec = { version = "0.7.2", default-features = false }

rp2040-boot2 = "0.2.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 0
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 0

# [features]
# # This is the set of features we enable by default
# default = ["critical-section-impl", "rom-func-cache"]

# # critical section that is safe for multicore use
# critical-section-impl = ["rp2040-hal/critical-section-impl"]


# # This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# # Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
# rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# # Memoize(cache) ROM function pointers on first use to improve performance
# rom-func-cache = ["rp2040-hal/rom-func-cache"]

# # Disable automatic mapping of language features (like floating point math) to ROM functions
# disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# # This enables ROM functions for f64 math that were not present in the earliest RP2040s
# rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]