[package]
name = "macropad_firmware"
version = "0.5.1"
edition = "2021"

[workspace]

[build-dependencies]
vergen = { version = "8.0.0-beta.2", features = ["build", "cargo", "git", "git2"] }

[dependencies]
num_enum = { version = "0.5.7", default-features = false }

usbd-human-interface-device = "0.3.1"
usb-device= "0.2"
packed_struct = { version = "0.10", default-features = false }
frunk = { version = "0.4", default-features = false }
fugit = "0.3"

cortex-m = { version = "0.7.7"}
cortex-m-rt = "0.7.2"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.1"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp2040-hal = {version = "0.7.0", features=["rt", "critical-section-impl"]}
rp2040-pac = {version = "0.4.0", features=["rt"]}

smart-leds = "0.3.0"
ws2812-pio = "0.5.0"

arrayvec = { version = "0.7.2", default-features = false }

rp2040-boot2 = "0.2.1"

delegate = "0.8"
log = {default-features = false, version = "0.4"}

crc = "3.0"
strum_macros = "0.24"
strum = { version = "0.24", default-features = false, features = ["strum_macros", "derive"] }
macropad_protocol = { git = "https://github.com/arfrie22/2x2macropad_protocol", default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
